app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/mt4-crispy-octo-deployement-e05-default: "true"
        io.kompose.service: app
    spec:
      containers:
        - args:
            # - bash
            # - -c
            # - chmod +x entrypoint.sh && ./entrypoint.sh
          image: rg.fr-par.scw.cloud/namespace-clever-hopper/mt4-app-g5:latest
          name: app
          ports:
            - containerPort: 3000
          resources: {}
          volumeMounts:
            - mountPath: /app
              name: app-claim1
      restartPolicy: Always
      volumes:
        - name: app-claim1
          persistentVolumeClaim:
            claimName: app-claim1
status: {}
