worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: worker
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/mt4-crispy-octo-deployement-e05-default: "true"
        io.kompose.service: worker
    spec:
      containers:
        - args:
            - bundle
            - exec
            - rake
            - environment
            - resque:work
            - QUEUE=*
          image: rg.fr-par.scw.cloud/namespace-clever-hopper/mt4-app-g5:latest
          name: worker
          resources: {}
      restartPolicy: Always
status: {}
