worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
  labels:
    app: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: yahyaadlouni/crispy-octo-worker:latest
          ports:
            - containerPort: 3000
          command: [ "bundle", "exec", "rake", "environment", "resque:work", "QUEUE=*" ]
