app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-web
spec:
  type: LoadBalancer
  ports:
    - name: app
      port: 80
      targetPort: 3000
  selector:
    io.kompose.service: app
