load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: myloadbalancer
  labels:
    app: app
spec:
  type: LoadBalancer
  ports:
  - port: 3000
    name: http
    targetPort: 3000
  selector:
    app: app
