service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rails-service
spec:
  selector:
    app: mt4-app-g5
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: LoadBalancer
