mt4-crispy-octo-deployement-e05-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: mt4-crispy-octo-deployement-e05-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/mt4-crispy-octo-deployement-e05-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/mt4-crispy-octo-deployement-e05-default: "true"
